# huffman

./: CMakeLists.txt
lib/: CMakeLists.txt  bit_vector.cpp  bit_vector.h  counter.cpp  counter.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  tree.cpp  tree.h
test/: CMakeLists.txt  lib_tests.cpp
util/: CMakeLists.txt  main.cpp
